RESOLVED FIXED 160080
Fix the Windows 64-bit build after r203537
https://bugs.webkit.org/show_bug.cgi?id=160080
Summary Fix the Windows 64-bit build after r203537
Csaba Osztrogonác
Reported 2016-07-22 03:06:27 PDT
https://trac.webkit.org/changeset/203537 broke the 64-bit Windows build, the only one 64 bit Windows bot is the WinCairo bot: https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/59268 C:\Users\Alex\Documents\WinCairoBot\win-cairo-release\build\Source\JavaScriptCore\jit\CCallHelpers.h(2259): error C2664: 'void JSC::CCallHelpers::setupArgumentsWithExecState(JSC::JSValueRegs,JSC::JSValueRegs,JSC::AbstractMacroAssembler<JSC::X86Assembler,JSC::MacroAssemblerX86Common>::TrustedImmPtr,JSC::AbstractMacroAssembler<JSC::X86Assembler,JSC::MacroAssemblerX86Common>::TrustedImmPtr)': cannot convert argument 3 from 'JSC::AbstractMacroAssembler<JSC::X86Assembler,JSC::MacroAssemblerX86Common>::TrustedImmPtr' to 'JSC::GPRReg' C:\Users\Alex\Documents\WinCairoBot\win-cairo-release\build\Source\JavaScriptCore\jit\CCallHelpers.h(2259): note: No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called (not: I don't plan to investigate this bug, just reported to let you know)
Attachments
Patch (1.39 KB, patch)
2016-07-22 08:24 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2016-07-22 08:24:51 PDT
Csaba Osztrogonác
Comment 2 2016-07-22 08:25:36 PDT
Comment on attachment 284335 [details] Patch rs=me
Per Arne Vollan
Comment 3 2016-07-22 08:35:25 PDT
Thanks for reviewing :)
WebKit Commit Bot
Comment 4 2016-07-22 08:56:19 PDT
Comment on attachment 284335 [details] Patch Clearing flags on attachment: 284335 Committed r203600: <http://trac.webkit.org/changeset/203600>
WebKit Commit Bot
Comment 5 2016-07-22 08:56:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.