Fix the Windows 64-bit build after r203537 https://bugs.webkit.org/show_bug.cgi?id=160080

Reviewed by Csaba Osztrogonác.

Added new version of setupArgumentsWithExecState method.

* jit/CCallHelpers.h:
(JSC::CCallHelpers::setupArgumentsWithExecState):


Canonical link: https://commits.webkit.org/178235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203600 268f45cc-cd09-0410-ab3c-d52691b4dbfc